--- a/index.html
+++ b/index.html
@@ -11,20 +11,28 @@
     
     <header>
         <nav>
-            <div class="logo"></div>
-            <div class="menu"></div>
-            <div class="accedi"></div>
+            <img src="assets/img/logo.svg" alt="">
+            <div class="menu">
+                <span href="">Scarica</span>
+                <span href="">Perché Discord</span>
+                <span href="">Nitro</span>
+                <span href="">Sicurezza</span>
+                <span href="">Assistenza</span>
+            </div>
+            <button class="accedi">Accedi</button>
         </nav>
 
         <div class="text-content">
-            <h1>Titolone</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In dolore similique optio ipsum nam quae aliquam placeat, eos laboriosam? Architecto molestias esse adipisci odio quisquam illo, voluptate provident similique sunt.</p>
+            <h1>Il tuo posto per parlare</h1>
+            <p>Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemnte di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+            <button class="download-button">Scarica per Mac</button>
+            <button id="apri-browser">Apri Discord nel tuo browser</button>
         </div>
     </header>
 
     <main>
         <section class="info">
-            <div class="immagine uno">Foto</div>
+            <img src="assets/img/item1.svg" class="immagine uno">
             <div class="text uno">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt repudiandae excepturi maiores illum. Quaerat accusamus, maiores voluptatibus quasi temporibus ad voluptatum illo suscipit magni consectetur deserunt esse dolore voluptas quae!</div>
         </section>
 
