--- a/index.html
+++ b/index.html
@@ -33,28 +33,38 @@
     <main>
         <section class="info">
             <img src="assets/img/item1.svg" class="immagine uno">
-            <div class="text uno">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt repudiandae excepturi maiores illum. Quaerat accusamus, maiores voluptatibus quasi temporibus ad voluptatum illo suscipit magni consectetur deserunt esse dolore voluptas quae!</div>
+            <div class="text uno">
+                <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p>I server discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
         </section>
 
         <section class="bg-wave">
             <section class="info">
-                <div class="immagine due order-1">Foto</div>
-                <div class="text due order-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, nulla! Accusantium iure similique qui alias, laborum est perferendis, doloribus doloremque excepturi commodi magni aspernatur sed atque provident iusto asperiores! Assumenda.</div>
+                <img src="assets/img/item2.svg" class="immagine due order-1">
+                <div class="text due order-2">
+                    <h2>Dove trovarsi è facile</h2>
+                    <p>Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+                </div>
             </section>
         </section>
 
         <section class="info">
-            <div class="immagine tre">Foto</div>
-            <div class="text tre">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod similique hic laboriosam est non dicta, veniam ipsa fugit blanditiis qui placeat nobis at esse. Quasi eveniet dolore asperiores tenetur consequuntur.</div>
+            <img src="assets/img/item3.svg" class="immagine tre">
+            <div class="text tre">
+                <h2>Da pochi a un fandom</h2>
+                <p>Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Conedi ai mentri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
         </section>
 
         <section class="tech bg-wave">
-            <div class="sottotitolo">
-                <h2>Ciaone</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus maiores, nobis expedita, odit ex exercitationem quia quod accusamus nulla vitae error earum, harum magni veritatis sequi commodi qui amet aut.</p>
+            <div class="tecnologia">
+                <h2>Tecnologia affidabile per tenersi in contatto</h2>
+                <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img src="assets/img/item4-big.svg" alt="">
+                <h3>Pronto a iniziare la tua avventura?</h3>
+                <button class="download">Scarica per Mac</button> 
             </div>
-            <div class="saluti"></div>
-            <div class="download"></div>
         </section>
     </main>
 
