--- a/index.html
+++ b/index.html
@@ -62,26 +62,69 @@
                 <h2>Tecnologia affidabile per tenersi in contatto</h2>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="assets/img/item4-big.svg" alt="">
-                <h3>Pronto a iniziare la tua avventura?</h3>
+                <h3 id="adventure">Pronto a iniziare la tua avventura?</h3>
                 <button class="download">Scarica per Mac</button> 
             </div>
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
         <div class="columns">
-            <div class="col col-1"></div>
-            <div class="col col-2"></div>
-            <div class="col col-3"></div>
-            <div class="col col-4"></div>
-            <div class="col col-5"></div>
+            <div class="col col-1">
+                <h2 class="ft-h2">Il tuo posto per parlare</h2>
+                <img src="assets/img/ita.png" alt="" class="italia">
+                <span id="lingua">Italiano </span>
+            </div>
+
+            <div class="col col-2">
+                <h3 class="ft-h3">Prodotto</h3>
+                <div>Scarica</div>
+                <div>Perché Discord</div>
+                <div>Nitro</div>
+                <div>Sicurezza</div>
+                <div>Assistenza</div>
+            </div>
+
+            <div class="col col-3">
+                <h3 class="ft-h3">Compagnia</h3>
+                <div>Chi siamo</div>
+                <div>Lavora con noi</div>
+                <div>Marchio</div>
+                <div>Redazione</div>
+                <div>Negozio</div>
+            </div>
+
+            <div class="col col-4">
+                <h3 class="ft-h3">Risorse</h3>
+                <div>Scarica</div>
+                <div>Perché Discord</div>
+                <div>Nitro</div>
+                <div>Sicurezza</div>
+                <div>Assistenza</div>
+                <div>Scarica</div>
+                <div>Perché Discord</div>
+                <div>Nitro</div>
+                <div>Sicurezza</div>
+                <div>Assistenza</div>
+                <div>Assistenza</div>
+            </div>
+
+            <div class="col col-5">
+                <h3 class="ft-h3">Norme</h3>
+                <div>Scarica</div>
+                <div>Perché Discord</div>
+                <div>Nitro</div>
+                <div>Sicurezza</div>
+                <div>Assistenza</div>
+            </div>
         </div>
 
         <!-- Piè pagina -->
         <div class="piè">
-            <div class="discord"></div>
-            <div class="registrati"></div>
-        </div>
+            <img src="assets/img/logo.svg" class="discord">
+            <button class="registrati">Registrati</button>
+        </img>
     
 
     </footer>
