--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bcdfcafa34.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     
     <header>
@@ -39,7 +42,8 @@
             </div>
         </section>
 
-        <section class="bg-wave">
+        <div class="bg-wave"></div>
+        <section class="bg-lg">
             <section class="info">
                 <img src="assets/img/item2.svg" class="immagine due order-1">
                 <div class="text due order-2">
@@ -57,7 +61,8 @@
             </div>
         </section>
 
-        <section class="tech bg-wave">
+        <div class="bg-wave"></div>
+        <section class="tech bg-lg">
             <div class="tecnologia">
                 <h2>Tecnologia affidabile per tenersi in contatto</h2>
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
@@ -75,6 +80,13 @@
                 <h2 class="ft-h2">Il tuo posto per parlare</h2>
                 <img src="assets/img/ita.png" alt="" class="italia">
                 <span id="lingua">Italiano </span>
+                <div>
+                    <i class="fa-brands fa-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-youtube"></i>
+
+                </div>
             </div>
 
             <div class="col col-2">
