aggiustamenti di dimenticanze varie

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bcdfcafa34.js" crossorigin="anonymous"></script>
 </head>
@@ -61,7 +63,7 @@
             </div>
         </section>
 
-        <div class="bg-wave"></div>
+
         <section class="tech bg-lg">
             <div class="tecnologia">
                 <h2>Tecnologia affidabile per tenersi in contatto</h2>
@@ -71,6 +73,7 @@
                 <button class="download">Scarica per Mac</button> 
             </div>
         </section>
+        
     </main>
 
     <!-- Footer -->
