--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <nav>
             <img src="assets/img/logo.svg" alt="">
             <div class="menu">
-                <span href="">Scarica</span>
-                <span href="">Perché Discord</span>
-                <span href="">Nitro</span>
-                <span href="">Sicurezza</span>
-                <span href="">Assistenza</span>
+                <span>Scarica</span>
+                <span>Perché Discord</span>
+                <span>Nitro</span>
+                <span>Sicurezza</span>
+                <span>Assistenza</span>
             </div>
             <button class="accedi">Accedi</button>
         </nav>
@@ -70,6 +70,8 @@
                 <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="assets/img/item4-big.svg" alt="">
                 <h3 id="adventure">Pronto a iniziare la tua avventura?</h3>
+            </div>
+            <div class="scaricamento">
                 <button class="download">Scarica per Mac</button> 
             </div>
         </section>
